apps/servarr/sonarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: servarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: sonarr-data
          mountPath: /config
        - name: servarr
          mountPath: /data
      volumes:
        - name: sonarr-data
          persistentVolumeClaim:
            claimName: sonarr-data-pvc
        - name: servarr
          persistentVolumeClaim:
            claimName: servarr
